[project]
name = "beeai-agents"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk>=0.13.0",
    "beeai-framework[wikipedia,duckduckgo,openmeteo]>=0.1.27",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "beeai_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
